Fix note font-size in overflow layout.

--- a/src/stylesheets/components/_print.scss
+++ b/src/stylesheets/components/_print.scss
@@ -160,7 +160,7 @@ label {
 
 .note-container {
   .overflow & {
-    font-size: 12px;
-    line-height: 12px * 2;
+    font-size: 12pt;
+    line-height: 12pt * 2;
   }
 }
